// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User List Item when user details are not returned should render as expected 1`] = `
<li class="user-list-item"><img src="https://some.fake.com/avatar.png" alt="Profile picture for test_user" class="user-list-item__avatar">
  <div class="user-list-item__details">
    <!----> <span class="user-list-item__details__login">test_user</span>
  </div>
  <!----> <a href="https://www.some.external.link.com" target="_blank" rel="noopener" class="user-list-item__link">
    <link-icon-stub aria-hidden="true" class="user-list-item__link__icon"></link-icon-stub> <span class="sr-only"> Opens link to test_user's GitHub Account in a new window.</span>
  </a>
</li>
`;

exports[`User List Item when user details are returned should render as expected 1`] = `
<li class="user-list-item"><img src="https://some.fake.com/avatar.png" alt="Profile picture for test_user" class="user-list-item__avatar">
  <div class="user-list-item__details"><span class="user-list-item__details__name">Test User</span> <span class="user-list-item__details__login">test_user</span></div>
  <div class="user-list-item__followers">

    <users-icon-stub aria-hidden="true" class="user-list-item__followers__icon"></users-icon-stub> <span class="sr-only">Followers</span>
  </div> <a href="https://www.some.external.link.com" target="_blank" rel="noopener" class="user-list-item__link">
    <link-icon-stub aria-hidden="true" class="user-list-item__link__icon"></link-icon-stub> <span class="sr-only"> Opens link to test_user's GitHub Account in a new window.</span>
  </a>
</li>
`;
